--- a/MvcMovie/MvcMovie/Views/Home/Buy.cshtml
+++ b/MvcMovie/MvcMovie/Views/Home/Buy.cshtml
@@ -1,16 +1,10 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Покупка</title>
-</head>
-<body>
     <div>
         <h3>Форма оформления покупки</h3>
         <form method="post" action="">
@@ -30,5 +24,4 @@
             </table>
         </form>
     </div>
-</body>
-</html>
+
