--- a/MvcMovie/MvcMovie/Views/Home/Index.cshtml
+++ b/MvcMovie/MvcMovie/Views/Home/Index.cshtml
@@ -1,15 +1,9 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Книжный магазин</title>
-</head>
-<body>
     <div>
         <h3>Распродажа книг</h3>
         <table>
@@ -30,5 +24,3 @@
             }
         </table>
     </div>
-</body>
-</html>
