--- a/MvcMovie/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/MvcMovie/MvcMovie/Views/Shared/_Layout.cshtml
@@ -13,5 +13,15 @@
         </ul>
     </nav>
     @RenderBody()
+<footer>
+    @if (IsSectionDefined("Footer"))
+    {
+        @RenderSection("Footer")
+    }
+    else
+    {
+        <span>Default footer</span>
+    }
+</footer>
 </body>
 </html>
