--- a/MvcMovie/MvcMovie/Views/Home/Buy.cshtml
+++ b/MvcMovie/MvcMovie/Views/Home/Buy.cshtml
@@ -1,25 +1,15 @@
 ﻿
 <!DOCTYPE html>
 
-<div>
-    <h3>Форма оформления покупки</h3>
-    <form method="post" action="">
-        <input type="hidden" value="@ViewBag.BookId" name="BookId" />
-        <table>
-            <tr>
-                <td><p>Введите свое имя </p></td>
-                <td><input type="text" name="Person" /> </td>
-            </tr>
-            <tr>
-                <td><p>Введите адрес :</p></td>
-                <td>
-                    <input type="text" name="Address" />
-                </td>
-            </tr>
-            <tr><td><input type="submit" value="Отправить" /> </td><td></td></tr>
-        </table>
-    </form>
-</div>
+@using (Html.BeginForm("Buy", "Home", FormMethod.Post))
+{
+    <input type="hidden" value="@ViewBag.BookId" name="BookId" />
+    <p>Введите свое имя: </p>
+    @Html.TextBox("Person", "Введите имя")
+    <p>Введите адрес :</p>
+    @Html.TextBox("Address", "Введите адрес")
+    <p><input type="submit" value="Отправить" /></p>
+}
 @section Footer
     {
     Footer 2021.
